@@ -3,6 +3,7 @@ EQEMu Changelog (Started on Sept 24, 2003 15:50)
 ==09/11/2010==
 Vanicae: Fix for guild management window updates
 wheeljack: Fix for missing tradeskill favorites
+Vanicae: Tribute Focus, SE_DivineSave, SE_Flurry, SE_Accuracy
 
 ==09/08/2010==
 gaeorn: fixes for new stricter version of gcc/glib
